@@ -3,12 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>1.3.0</version>
+        <version>2.1.6</version>
         <relativePath/>
     </parent>
+
     <artifactId>item-handler</artifactId>
     <version>unversioned</version>
     <name>item-handler</name>
@@ -17,34 +19,38 @@
     </description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
-        <structured-logging.version>1.9.25</structured-logging.version>
-        <gson.version>2.8.0</gson.version>
-        <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
-        <mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
-        <junit-jupiter.version>5.5.0</junit-jupiter.version>
-        <junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
-        <junit-vintage-engine-version>5.3.2</junit-vintage-engine-version>
-        <hamcrest-all-version>1.3</hamcrest-all-version>
-        <start-class>uk.gov.companieshouse.itemhandler.ItemHandlerApplication</start-class>
-        <private-api-sdk-java.version>2.0.188</private-api-sdk-java.version>
-        <api-sdk-manager-java-library.version>1.0.4</api-sdk-manager-java-library.version>
-        <api-sdk-java.version>4.1.48</api-sdk-java.version>
-        <kafka-models.version>1.0.36</kafka-models.version>
-        <ch-kafka.version>1.4.2</ch-kafka.version>
-        <snakeyaml.version>1.26</snakeyaml.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <spring-boot-dependencies.version>2.5.7</spring-boot-dependencies.version>
-        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
-        <spring-boot-maven-plugin.version>2.5.7</spring-boot-maven-plugin.version>
-        <environment-reader-library.version>1.3.6</environment-reader-library.version>
-        <system-rules-version>1.17.2</system-rules-version>
-        <powermock.version>2.0.7</powermock.version>
-        <testcontainers.version>1.16.2</testcontainers.version>
-        <mockserver.version>5.5.4</mockserver.version>
+        <java.version>21</java.version>
+
+        <gson.version>2.11.0</gson.version>
+        <hamcrest.version>3.0</hamcrest.version>
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+        <junit-jupiter.version>5.11.0</junit-jupiter.version>
+        <junit-jupiter-engine.version>5.11.0</junit-jupiter-engine.version>
+        <junit-vintage-engine.version>5.11.0</junit-vintage-engine.version>
+        <mapstruct.version>1.4.1.Final</mapstruct.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+        <mockito-junit-jupiter.version>5.13.0</mockito-junit-jupiter.version>
+        <mockserver-client-java.version>5.15.0</mockserver-client-java.version>
+        <snakeyaml.version>2.3</snakeyaml.version>
+        <spring-boot-dependencies.version>3.3.4</spring-boot-dependencies.version>
+        <spring-boot-maven-plugin.version>3.3.4</spring-boot-maven-plugin.version>
+        <system-rules.version>1.17.2</system-rules.version>
+        <testcontainers.version>1.20.1</testcontainers.version>
+
+        <!-- Internal Dependencies -->
+        <api-sdk-java.version>6.0.9</api-sdk-java.version>
+        <api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>
+        <ch-kafka.version>3.0.3</ch-kafka.version>
+        <kafka-models.version>3.0.8</kafka-models.version>
+        <avro.version>1.12.0</avro.version>
+        <environment-reader-library.version>3.0.1</environment-reader-library.version>
+        <private-api-sdk-java.version>4.0.99</private-api-sdk-java.version>
+        <structured-logging.version>3.0.9</structured-logging.version>
+
         <!-- Docker property -->
-        <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
+        <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
+
         <sonar.exclusions>
             **/config/FeatureOptions.java,
             **/config/FeatureOptionsConfig.java,
@@ -63,7 +69,14 @@
             **/itemsummary/PaymentDetails.java,
             **/itemsummary/OrderItemPair.java
         </sonar.exclusions>
-        <sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
+        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
+
+        <start-class>uk.gov.companieshouse.itemhandler.ItemHandlerApplication</start-class>
+
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
 
     <dependencyManagement>
@@ -82,6 +95,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jul-to-slf4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,6 +110,10 @@
                 <exclusion>
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -104,25 +127,25 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito-junit-jupiter-version}</version>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit-vintage-engine-version}</version>
+            <version>${junit-vintage-engine.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest-all-version}</version>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>${org.mapstruct.version}</version>
+            <version>${mapstruct.version}</version>
         </dependency>
 
         <dependency>
@@ -149,6 +172,12 @@
             <artifactId>structured-logging</artifactId>
             <version>${structured-logging.version}</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -159,6 +188,11 @@
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>kafka-models</artifactId>
             <version>${kafka-models.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>${avro.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
@@ -178,6 +212,12 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.pcollections</groupId>
+                    <artifactId>pcollections</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -192,19 +232,7 @@
         <dependency>
             <groupId>com.github.stefanbirkner</groupId>
             <artifactId>system-rules</artifactId>
-            <version>${system-rules-version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito2</artifactId>
-            <version>${powermock.version}</version>
+            <version>${system-rules.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -212,6 +240,12 @@
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
@@ -222,8 +256,18 @@
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-client-java</artifactId>
-            <version>${mockserver.version}</version>
+            <version>${mockserver-client-java.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.ethlo.time</groupId>
+                    <artifactId>itu</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                </exclusions>
         </dependency>
     </dependencies>
 
@@ -272,10 +316,13 @@
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>${org.mapstruct.version}</version>
+                            <version>${mapstruct.version}</version>
                         </path>
                         <!-- other annotation processors -->
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -294,6 +341,12 @@
                     <container>
                         <expandClasspathDependencies>true</expandClasspathDependencies>
                     </container>
+                    <from>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+                    </from>
+                    <to>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/item-handler:latest</image>
+                    </to>
                 </configuration>
             </plugin>
             <plugin>
